Fix EmptyBlockSample so it compiles and the integration tests can run